Make templates use base

--- a/authorization/templates/edit_user_info/changed_password.html
+++ b/authorization/templates/edit_user_info/changed_password.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>password changed</title>
-</head>
-<strong>YOUR PASSWORD HAS BEEN CHANGED</strong>
-<br><br>
-<body>
-    <form method="get" action="{% url 'workflow:dashboard' %}">
+{% extends 'misc/base.html' %}
+{% block content %}
+    <form class="ui form" method="get" action="{% url 'workflow:dashboard' %}">
         <input type="submit" value="HOME">
     </form>
-</body>
-</html>
+{% endblock content %}
