--- a/management/templates/management/management_dashboard.html
+++ b/management/templates/management/management_dashboard.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
-</head>
-<body>
+{% extends 'misc/base.html' %}
+{% block content %}
 <table>
     <tr>
         <td width="20%">
@@ -95,5 +89,4 @@
         </td>
     </tr>
 </table>
-</body>
-</html>
+{% endblock content %}
