--- a/management/templates/management/new_exchange_request_type.html
+++ b/management/templates/management/new_exchange_request_type.html
@@ -1,6 +1,6 @@
 {% extends 'misc/base.html' %}
 {% block content %}
-<form method="post" action={% url 'management:add_exchange_request_type' %}>
+<form class="ui form" method="post" action={% url 'management:add_exchange_request_type' %}>
     {% csrf_token %}
     {{ new_exchange_request_type }}
     <input type="submit" value="Submit">
