--- a/misc/templates/misc/rules.html
+++ b/misc/templates/misc/rules.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rules</title>
-</head>
-<body>
+{% extends 'misc/base.html' %}
+{% block content %}
     <div>
         <ul>
             <li>You have to obey all our rules</li>
@@ -12,5 +7,4 @@
             <li>We can kill you</li>
         </ul>
     </div>
-</body>
-</html>
+{% endblock content %}
