--- a/workflow/templates/workflow/employee_dashboard.html
+++ b/workflow/templates/workflow/employee_dashboard.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Dashboard</title>
-        <link rel="stylesheet" href="../../../documents/design/wireframe/styles.css">
-    </head>
-    <body>
+{% extends 'misc/base.html' %}
+{% block content %}
         <table>
             <tr>
                 <td width="20%">
@@ -34,5 +28,4 @@
                 </td>
             </tr>
         </table>
-    </body>
-</html>
+{% endblock %}
