--- a/workflow/templates/workflow/user_new_anonymous_request.html
+++ b/workflow/templates/workflow/user_new_anonymous_request.html
@@ -1,6 +1,6 @@
 {% extends 'misc/base.html' %}
 {% block content %}
-    <form method="post" action="{% url 'workflow:new_anonymous_request' request_type.id %}">
+    <form class="ui form" method="post" action="{% url 'workflow:new_anonymous_request' request_type.id %}">
         <label for="dst_email">Destination User Email:</label>
         <input id="dst_email">
         <br>
