--- a/workflow/templates/workflow/user_new_request.html
+++ b/workflow/templates/workflow/user_new_request.html
@@ -12,7 +12,7 @@
     <br>
     Information: {{ request_type.information }}
     <br>
-    <form method="post" action="{% url 'workflow:new_request' request_type.id %}">
+    <form class="ui form" method="post" action="{% url 'workflow:new_request' request_type.id %}">
     {% csrf_token %}
     {{ new_request_form }}
     <input type="submit" value="Submit">
