--- a/authorization/templates/edit_user_info/change_password.html
+++ b/authorization/templates/edit_user_info/change_password.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>change password</title>
-</head>
-<br><br>
-<body>
-    <form method="get" action="{% url 'changed_password' %}">
+{% extends 'misc/base.html' %}
+{% block content %}
+    <form class="ui form" method="get" action="{% url 'changed_password' %}">
  	<label for="oldpassword">Old Password</label>
         <input type="password" id="oldpassword">
 	<br><br>
@@ -15,5 +9,4 @@
 	<br><br>
         <input type="submit" value="CHANGE PASSWORD">
     </form>
-</body>
-</html>
+{% endblock content %}
