--- a/authorization/templates/edit_user_info/changed_profile.html
+++ b/authorization/templates/edit_user_info/changed_profile.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Success</title>
-</head>
-<body>
+{% extends 'misc/base.html' %}
+{% block content %}
     <h1>Changed profile successfully!</h1>
-    <form action="{% url 'workflow:dashboard' %}"><button type="submit">Home</button></form>
-</body>
-</html>
+    <form class="ui form" action="{% url 'workflow:dashboard' %}"><button type="submit">Home</button></form>
+{% endblock content %}
