--- a/authorization/templates/registration/password_change_done.html
+++ b/authorization/templates/registration/password_change_done.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "misc/base.html" %}
 {% load i18n %}
 
 {% block content %}
 <p>{% trans "Password changed" %}</p>
-{% endblock %}
-
 <strong>YOUR PASSWORD HAS BEEN CHANGED</strong>
+{% endblock %}
