--- a/authorization/templates/registration/password_reset_confirm.html
+++ b/authorization/templates/registration/password_reset_confirm.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "misc/base.html" %}
 {% load i18n %}
 
 {% block content %}
 
 {% if validlink %}
 
-<form method="post" action=".">
+<form class="ui form" method="post" action=".">
   {% csrf_token %} 
   {{ form.as_p }}
 
