--- a/authorization/templates/registration/registration_form.html
+++ b/authorization/templates/registration/registration_form.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "misc/base.html" %}
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
+<form class="ui form" method="post" action=".">
   {% csrf_token %}
   {{ form.as_p }}
 
