--- a/misc/templates/misc/home.html
+++ b/misc/templates/misc/home.html
@@ -32,7 +32,7 @@
     <!--End of Currency Converter widget by FreeCurrencyRates.com -->
 
     <h2>Contact Us</h2>
-    <form action="{% url 'home' %}" method="post">
+    <form class="ui form" action="{% url 'home' %}" method="post">
     {% csrf_token %}
     {{ contact_admin_form }}
      <input type="submit" value="Submit">
