--- a/workflow/templates/workflow/user_new_exchange_request.html
+++ b/workflow/templates/workflow/user_new_exchange_request.html
@@ -13,7 +13,7 @@
 
     <br>
     {% endif %}
-    <form method="post" action="{% url 'workflow:new_exchange_request' exchange_request_type.id %}">
+    <form class="ui form" method="post" action="{% url 'workflow:new_exchange_request' exchange_request_type.id %}">
     {% csrf_token %}
     {{ new_exchange_request_form }}
     <input type="submit" value="Submit">
