--- a/authorization/templates/edit_user_info/change_password.html
+++ b/authorization/templates/edit_user_info/change_password.html
@@ -7,6 +7,6 @@
  	<label for="newpassword">New Password</label>
         <input type="password" id="newpassword">
 	<br><br>
-        <input type="submit" value="CHANGE PASSWORD">
+        <input type="submit" class="ui primary button" value="CHANGE PASSWORD">
     </form>
 {% endblock content %}
