--- a/authorization/templates/edit_user_info/changed_password.html
+++ b/authorization/templates/edit_user_info/changed_password.html
@@ -1,6 +1,6 @@
 {% extends 'misc/base.html' %}
 {% block content %}
     <form class="ui form" method="get" action="{% url 'workflow:dashboard' %}">
-        <input type="submit" value="HOME">
+        <input type="submit" class="ui primary button" value="HOME">
     </form>
 {% endblock content %}
