--- a/authorization/templates/edit_user_info/changed_profile.html
+++ b/authorization/templates/edit_user_info/changed_profile.html
@@ -1,5 +1,5 @@
 {% extends 'misc/base.html' %}
 {% block content %}
     <h1>Changed profile successfully!</h1>
-    <form class="ui form" action="{% url 'workflow:dashboard' %}"><button type="submit">Home</button></form>
+    <form class="ui form" action="{% url 'workflow:dashboard' %}"><button type="submit" class="ui primary button">Home</button></form>
 {% endblock content %}
