--- a/authorization/templates/registration/password_reset_confirm.html
+++ b/authorization/templates/registration/password_reset_confirm.html
@@ -9,7 +9,7 @@
   {% csrf_token %} 
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" class="ui primary button" value="{% trans 'Submit' %}" />
 </form>
 
 {% else %}
