--- a/authorization/templates/registration/registration_form.html
+++ b/authorization/templates/registration/registration_form.html
@@ -6,6 +6,6 @@
   {% csrf_token %}
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" class="ui primary button" value="{% trans 'Submit' %}" />
 </form>
 {% endblock %}
