--- a/financial/templates/financial/internal_payment.html
+++ b/financial/templates/financial/internal_payment.html
@@ -3,7 +3,7 @@
     <form class="ui form" method="post" action="{% url 'financial:internal_payment' %}">
         {% csrf_token %}
         {{ new_anonymous_request_form }}
-        <input type="submit" value="Submit">
+        <input type="submit" class="ui primary button" value="Submit">
     </form>
 
 {% endblock content %}
