--- a/misc/templates/misc/home.html
+++ b/misc/templates/misc/home.html
@@ -1,20 +1,6 @@
 {% extends 'misc/base.html' %}
 {% block page_title %}Home{% endblock page_title %}
 {% block content %}
-    <div>
-        <h1>
-            GSPaid
-        </h1>
-        <a href="{% url 'misc:rules' %}">Rules</a>
-        <a href="{% url 'registration_register' %}">Register</a>
-        <a href="{% url 'auth_login' %}">Login</a>
-        {% if user.is_authenticated %}
-            <a href="{% url 'auth_logout' %}">Logout</a>
-            <a href="{% url 'change_profile' %}">Profile</a>
-            <a href="{% url 'misc:dashboard' %}">Dashboard</a>
-
-        {% endif %}
-    </div>
     <h2>About Us</h2>
     <div>
         <p>
@@ -35,6 +21,6 @@
     <form class="ui form" action="{% url 'home' %}" method="post">
     {% csrf_token %}
     {{ contact_admin_form }}
-     <input type="submit" value="Submit">
+     <input type="submit" class="ui primary button" value="Submit">
     </form>
 {% endblock content %}
