--- a/workflow/templates/workflow/check_request.html
+++ b/workflow/templates/workflow/check_request.html
@@ -21,7 +21,7 @@
     <form class="ui form" method="post" action="{% url 'workflow:check_request' request.id %}">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input type="submit" class="ui primary button" value="Submit">
     </form>
 
     <br>
