--- a/workflow/templates/workflow/user_new_anonymous_request.html
+++ b/workflow/templates/workflow/user_new_anonymous_request.html
@@ -6,7 +6,7 @@
         <br>
         {% csrf_token %}
         {{ new_anonymous_request_form }}
-        <input type="submit" value="Submit">
+        <input type="submit" class="ui primary button" value="Submit">
     </form>
 
 {% endblock content %}
