--- a/workflow/templates/workflow/user_new_exchange_request.html
+++ b/workflow/templates/workflow/user_new_exchange_request.html
@@ -16,7 +16,7 @@
     <form class="ui form" method="post" action="{% url 'workflow:new_exchange_request' exchange_request_type.id %}">
     {% csrf_token %}
     {{ new_exchange_request_form }}
-    <input type="submit" value="Submit">
+    <input type="submit" class="ui primary button" value="Submit">
     </form>
 
 
