--- a/workflow/templates/workflow/user_new_request.html
+++ b/workflow/templates/workflow/user_new_request.html
@@ -15,7 +15,7 @@
     <form class="ui form" method="post" action="{% url 'workflow:new_request' request_type.id %}">
     {% csrf_token %}
     {{ new_request_form }}
-    <input type="submit" value="Submit">
+    <input type="submit" class="ui primary button" value="Submit">
     </form>
 
 
